# RadiaCUDA

./: .gitignore  CMakeLists.txt  INSTALLATION.md  README.md  environment_linux.yml  environment_win.yml  environment_win_full.yml  pyproject.toml
PyRadia/: __init__.py  field_gpu.py  field_kernel.py  radia_flatten.py  radia_viewer.py
cpp/: CMakeLists.txt
cpp/src/clients/python/: pyparse.h  radpy.cpp
cpp/src/core/: radapl1.cpp  radapl1.h  radapl2.cpp  radapl3.cpp  radappl.h  radauxst.h  radexpgn.cpp  radg.h  radg3d.cpp  radg3d.h  radg3dgr.cpp  radg3dgr.h  radgpu_asm.cpp  radgpu_asm.cu  radgpu_asm.h  radgpu_fld.cpp  radgpu_fld.cu  radgpu_fld.h  radgpurlx.cpp  radgpurlx.cu  radgpurlx.h  radgroup.h  radinter.cpp  radintrc.cpp  radintrc.h  radiobuf.cpp  radmater.h  radplnr.h  radplnr2.cpp  radrlmet.cpp  radrlmet.h  radrlmet_gpu.cpp  radsbdrc.h  radsend.cpp  radvlpgn.h  radyield.h
cpp/src/ext/genmath/: gmfft.cpp  gmfft.h
cpp/src/ext/glut_viewer/: simplegraph.h
cpp/src/lib/: raddll.def  radentry.cpp  radentry.h
examples/: RADIA_Example01.py  RADIA_Example02.py  RADIA_Example03.py  RADIA_Example04.py  RADIA_Example05.py  RADIA_Example06.py  benchmark_gpu.py  benchmark_gpu_scaling2.py  radia_viewer.py  test_kernel.py  test_recmag.py  uti_plot.py
tests/: _mpi.py  benchmark_gpu_scaling.py  test_flatten.py  test_gpu_asm_rowtransform.py  test_gpu_fallback.py  test_gpu_fld_chunking.py  test_recmag.py  test_recmag_sym.py  test_tet.py  test_tet_sym.py  test_tet_sym_coil.py
